@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT stethoscope --help
+Mlog -x stethoscope --help
