@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT tachograph --help
+Mlog -x tachograph --help
