@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT Mbeddedsql5 --help
+Mlog -x Mbeddedsql5 --help
