@@ -5,6 +5,6 @@ user=monetdb
 password=monetdb
 EOF
 
-Mlog -x "$MTIMEOUT $SQLCLIENT -h$HOST -p$MAPIPORT -d$TSTDB -i -e < \"$TSTSRCDIR/alter_table_describe.SF-1146092-src.sql\""
+Mlog -x "$SQLCLIENT -h$HOST -p$MAPIPORT -d$TSTDB -i -e < \"$TSTSRCDIR/alter_table_describe.SF-1146092-src.sql\""
 
 rm -f .monetdb
