@@ -5,4 +5,4 @@ user=monetdb
 password=monetdb
 EOF
 
-Mlog -x "$MTIMEOUT java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -f \"$RELSRCDIR/drop_schema_crash.SF-1504794-data.sql\""
+Mlog -x "java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -f \"$RELSRCDIR/drop_schema_crash.SF-1504794-data.sql\""
