@@ -5,6 +5,6 @@ user=monetdb
 password=monetdb
 EOF
 
-Mlog -x "$MTIMEOUT java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -e -f \"$TSTSRCBASE/$TSTDIR/bogus-auto-generated-keys.sql\""
+Mlog -x "java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -e -f \"$TSTSRCBASE/$TSTDIR/bogus-auto-generated-keys.sql\""
 
 rm -f .monetdb
