@@ -8,6 +8,6 @@ EOF
 LC_ALL="`locale -a | grep -i en_us | grep -i utf | head -n 1`"
 export LC_ALL
 
-Mlog -x "$MTIMEOUT java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -f \"$RELSRCDIR/../unicode_varchar-bug-sf-1041324.sql\""
+Mlog -x "java nl.cwi.monetdb.client.JdbcClient -h $HOST -p $MAPIPORT -d ${TSTDB} -f \"$RELSRCDIR/../unicode_varchar-bug-sf-1041324.sql\""
 
 rm -f .monetdb
